{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 101,
  "lineage": "b322d821-c2a9-ece6-bc47-fcc74601bb81",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8c8d5561fd4e299",
            "arn": "arn:aws:ec2:us-east-2:334894867020:elastic-ip/eipalloc-0d8c8d5561fd4e299",
            "domain": "vpc",
            "id": "eipalloc-0d8c8d5561fd4e299",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-150-31-183.us-east-2.compute.amazonaws.com",
            "public_ip": "3.150.31.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dayplanner-vpc-nat-eip"
            },
            "tags_all": {
              "Name": "dayplanner-vpc-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334894867020:internet-gateway/igw-069b914f8d2e17616",
            "id": "igw-069b914f8d2e17616",
            "owner_id": "334894867020",
            "tags": {
              "Name": "dayplanner-vpc-igw"
            },
            "tags_all": {
              "Name": "dayplanner-vpc-igw"
            },
            "vpc_id": "vpc-0332da69d2024f42f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8c8d5561fd4e299",
            "association_id": "eipassoc-0a8ad5bdc764120b9",
            "connectivity_type": "public",
            "id": "nat-05562cb828fc9c46c",
            "network_interface_id": "eni-019a7c01a592aabb2",
            "private_ip": "10.0.3.200",
            "public_ip": "3.150.31.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09044c89089ab97f1",
            "tags": {
              "Name": "dayplanner-vpc-nat"
            },
            "tags_all": {
              "Name": "dayplanner-vpc-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334894867020:route-table/rtb-0ddba7caf485b9557",
            "id": "rtb-0ddba7caf485b9557",
            "owner_id": "334894867020",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05562cb828fc9c46c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dayplanner-vpc-private-rt"
            },
            "tags_all": {
              "Name": "dayplanner-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0332da69d2024f42f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334894867020:route-table/rtb-0164bb45377dfcc7b",
            "id": "rtb-0164bb45377dfcc7b",
            "owner_id": "334894867020",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069b914f8d2e17616",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dayplanner-vpc-public-rt"
            },
            "tags_all": {
              "Name": "dayplanner-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0332da69d2024f42f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cb85a46914fd31b",
            "route_table_id": "rtb-0ddba7caf485b9557",
            "subnet_id": "subnet-0a0213001c5bce28c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b6817d56827d9e8",
            "route_table_id": "rtb-0ddba7caf485b9557",
            "subnet_id": "subnet-0090445970b218794"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f349b8bd7f95a276",
            "route_table_id": "rtb-0164bb45377dfcc7b",
            "subnet_id": "subnet-09044c89089ab97f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c9090f45b4e61c3",
            "route_table_id": "rtb-0164bb45377dfcc7b",
            "subnet_id": "subnet-0b5739804241401cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334894867020:security-group/sg-0a4ef9caeef346528",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4ef9caeef346528",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dayplanner-rds-sg",
            "name_prefix": "",
            "owner_id": "334894867020",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dayplanner-rds-sg"
            },
            "tags_all": {
              "Name": "dayplanner-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0332da69d2024f42f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334894867020:subnet/subnet-0a0213001c5bce28c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0213001c5bce28c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "334894867020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dayplanner-vpc-private-us-east-2a",
              "kubernetes.io/cluster/dayplanner-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dayplanner-vpc-private-us-east-2a",
              "kubernetes.io/cluster/dayplanner-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0332da69d2024f42f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334894867020:subnet/subnet-0090445970b218794",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0090445970b218794",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "334894867020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dayplanner-vpc-private-us-east-2b",
              "kubernetes.io/cluster/dayplanner-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dayplanner-vpc-private-us-east-2b",
              "kubernetes.io/cluster/dayplanner-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0332da69d2024f42f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334894867020:subnet/subnet-09044c89089ab97f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09044c89089ab97f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "334894867020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dayplanner-vpc-public-us-east-2a",
              "kubernetes.io/cluster/dayplanner-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dayplanner-vpc-public-us-east-2a",
              "kubernetes.io/cluster/dayplanner-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0332da69d2024f42f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334894867020:subnet/subnet-0b5739804241401cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5739804241401cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "334894867020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dayplanner-vpc-public-us-east-2b",
              "kubernetes.io/cluster/dayplanner-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dayplanner-vpc-public-us-east-2b",
              "kubernetes.io/cluster/dayplanner-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0332da69d2024f42f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:334894867020:vpc/vpc-0332da69d2024f42f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ac1c54af19615b4",
            "default_route_table_id": "rtb-093e514ce029eec97",
            "default_security_group_id": "sg-0a5d99df8c24d8aa7",
            "dhcp_options_id": "dopt-0a5c964b6d2ea040e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0332da69d2024f42f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093e514ce029eec97",
            "owner_id": "334894867020",
            "tags": {
              "Name": "dayplanner-vpc"
            },
            "tags_all": {
              "Name": "dayplanner-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}